добавил ссылки на фото

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ html, body {
 }
 
 body {
-	background-image: url(brick-wall-1245825_1920.jpg);
+	background-image: url(https://cdn1.savepice.ru/uploads/2020/3/10/aae434169ec36730c6bf3dd7c37c12e6-full.jpg);
 	-webkit-background-size: cover;
   	-moz-background-size: cover;
   	-o-background-size: cover;
